# wetcd

./: .gitignore  README.md  default.nix  stack.yaml  testConf.yaml  wetcd.cabal
app/: .#Main.hs  Config.hs  Main.hs
dockerfiles/: client.cert  client.key  docker-compose.yml
dockerfiles/interrogator/: Dockerfile
dockerfiles/nginx-proxy/: Dockerfile  nginx.conf
dockerfiles/nginx-proxy/certs/: cert.crt  cert.key  dhparam.pem  server.cert  server.key
tls/: testcert.pem  testkey.pem
