name:                wetcd
version:             0.1.0.0
synopsis:            An authentication frontend to provide a key/value store as a service. Currently uses etcd, warp and wai.
description:         Please see README.md
homepage:            https://github.com/rlupton20/wetcd
license:             GPL-3
license-file:        LICENSE
author:              Richard Lupton
maintainer:          richard.lupton@gmail.com
copyright:           2016 Richard Lupton
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable wetcd-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-extensions:    OverloadedStrings
  build-depends:       base
                     , wetcd
                     , yaml
                     , warp
                     , wai
                     , http-types
                     , transformers
                     , haskell-etcd
                     , bytestring
                     , text
  default-language:    Haskell2010

test-suite wetcd-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , wetcd
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rlupton20/wetcd
